# flash

./: .gitignore  .pre-commit-config.yaml  .templatesyncignore  .version  CODEOWNERS  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml  hotfix.yml  release.yml  sync-template.yml
docs/: CONVENTIONS.md  POETRY.md  TEMPLATE.md
notebooks/EDA/pandas-profiling/: intro_tutorial.ipynb  time_series_tutorial.ipynb
notebooks/EDA/ydata-profiling/: README.md  intro_tutorial.ipynb  time_series_tutorial.ipynb
notebooks/ML/AutoML/PyCaret/: README.md  regression.ipynb  time_series.ipynb
notebooks/ML/Nixtla/: README.md  hierarchical_data_tutorial.ipynb  time_series_tutorial.ipynb  utils.py
notebooks/ML/Time series forecasting/Nixtla/: hierarchical_data_tutorial.ipynb  utils.py
notebooks/TEMPLATE/: README.md  intro_tutorial.ipynb
tests/: example_test.py  notebooks_test.py
